# chicago_rstrips

./: .coverage  .gitignore  Dockerfile  Makefile  README.md  coverage.xml  docker-compose.yml  main.py  pyproject.toml  pytest.ini
.github/workflows/: ci-tests.yaml
dags/: batch_etl_pipeline.py  coldstart_etl_pipeline.py  dwh_transformation_pipeline.py  etl_batch_processing.py  etl_main_pipeline.py  etl_static_features.py  statics_features_setup.py  test_sensor_debug.py  trips_etl_pipeline.py
docker/: entrypoint.sh
sql/: create_data_marts.sql  create_dim_dynamic_tables.sql  create_dim_location_schema.sql  create_dim_spatial_schema.sql  create_dim_static_tables.sql  create_fact_tables.sql  create_features_schema.sql  create_schemas.sql  create_staging_schema.sql  create_staging_tables.sql  create_stg_raw_trips.sql  upsert_fact_tables.sql
src/chicago_rstrips/: api_client.py  api_request_rows_in_dataset.py  chicago_voronoi_zones.py  config.py  create_location_static_features.py  db_loader.py  exclude_invalid_locations.py  extract_raw_trips_data.py  extract_traffic_data.py  extract_trips_data.py  extract_weather_data.py  join_spatial_dims.py  load_centroid_locations.py  load_dim_dynamic_tables.py  load_facts_to_staging.py  load_geospatial_features.py  load_locations.py  load_raw_trips_data.py  location_dimension.py  socrata_api_client.py  utils.py
tests/: pytest.ini  test_extract_raw_trips_data.py  test_extract_traffic_data.py  test_extract_trips_data.py  test_extract_weather_data.py  tests_utils.py
