[project]
name = "chicago-rstrips"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow~=2.11",
    "boto3",
    "numpy",
    "pandas",
    "psycopg2-binary",
    "requests>=2.32.5",
    "sodapy",
    "dotenv"
]
